adding information about myself

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,7 @@
 theme: jekyll-theme-minimal
 title: Welcome to my homepage
 description: Feel free to bookmark and keep an eye on my projects
+ #Hello World
+ ### My name is Nicolas Castellanos and I am a third year engineering
+ ### student at Dalhousie University completing my bachelors in Comp. Eng
 
